--- a/app/home_page.html
+++ b/app/home_page.html
@@ -1,22 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Automation Learning Site</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+<!-- ... (existing code) ... -->
+
 <body>
     <header>
         <h1>Automation Learning Site</h1>
     </header>
+    <nav>
+        <ul>
+            <li><a href="#automation-section">Automation</a></li>
+            <li><a href="#about-section">About</a></li>
+            <li><a href="#contact-section">Contact</a></li>
+        </ul>
+    </nav>
     <main>
         <section id="automation-section">
             <h2>Automation Section</h2>
             <p id="automation-text">Click the button to automate something!</p>
             <button id="automation-button">Automate</button>
         </section>
+        <section id="about-section">
+            <h2>About Section</h2>
+            <p>This is the about section of the site. You can add information about yourself or your project here.</p>
+        </section>
+        <section id="contact-section">
+            <h2>Contact Section</h2>
+            <p>Feel free to reach out to us using the contact form below:</p>
+            <form id="contact-form">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </section>
     </main>
-    <script src="script.js"></script>
+    <!-- ... (existing code) ... -->
 </body>
-</html>
