--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,7 @@
 <!-- ... (existing code) ... -->
+<!-- Update CSS and JavaScript paths -->
+<link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
 
 <body>
     <header>
