--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <body>
     <header>
-        <h1>Automation Learning Site</h1>
+        <h1>A11Y Automation Learning Site</h1>
     </header>
     <nav>
         <ul>
