--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <section id="automation-section">
             <h2>Automation Section</h2>
             <p id="automation-text">Click the button to automate something!</p>
-            <button id="automation-button">Automate</button>
+            <button id="automation-button">Automate</button> <button id="automation-button">Automate2</button>
+            <button id="automation-button">Automate3</button>
         </section>
         <section id="about-section">
             <h2>About Section</h2>
