--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
         <section id="about-section">
             <h2>About Section</h2>
-            <p>This is the about section of the site. You can add information about yourself or your project here.</p>
+            <p>This is the about section of the site. This site is built for learning A11Y automation using CYPRESS. You can add information about yourself or your project here.</p>
         </section>
         <section id="contact-section">
             <h2>Contact Section</h2>
