--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             <li><a href="#automation-section">Automation</a></li>
             <li><a href="#about-section">About</a></li>
             <li><a href="#contact-section">Contact</a></li>
+            <li><a href="#automation-section">Automation</a></li>
+            <li><a href="#about-section">About</a></li>
+            <li><a href="#contact-section">Contact</a></li>
         </ul>
     </nav>
     <main>
