--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </section>
         <section id="about-section">
             <h2>About Section</h2>
-            <p>This is the about section of the site. This site is built for learning A11Y automation using CYPRESS. You can add information about yourself or your project here.</p>
+            <p>This is the about section of the site. This site is built for learning A11YY automation using CYPRESS. You can add information about yourself or your project here.</p>
             <section id="about-section">
     <p>Welcome to [Your Company/Project Name], your trusted resource for Accessibility (a11y) Automation using Cypress. We are passionate about creating inclusive and user-friendly web experiences for everyone, regardless of their abilities or disabilities.</p>
 
