--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <!-- ... (existing code) ... -->
 <!-- Update CSS and JavaScript paths -->
 <link rel="stylesheet" href="style.css">
+<style>
+        /* Set a fixed height for the carousel */
+        #carouselExample {
+            max-width: 9in; /* 3 inches per image, 3 images in a row */
+            margin: auto;
+        }
+
+        /* Ensure images fill the container without stretching */
+        .carousel-inner img {
+            width: 100%;
+            height: auto;
+        }
+    </style>
     <script src="script.js"></script>
 </head>
 
@@ -83,13 +96,13 @@
 <div id="carouselExample" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="https://placekitten.com/100/50" alt="First slide">
+            <img class="d-block w-100" src="https://placekitten.com/900/900" alt="First slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="https://placekitten.com/100/50" alt="Second slide">
+            <img class="d-block w-100" src="https://placekitten.com/900/901" alt="Second slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="https://placekitten.com/100/50" alt="Third slide">
+            <img class="d-block w-100" src="https://placekitten.com/900/902" alt="Third slide">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
@@ -105,6 +118,5 @@
 <!-- Include Bootstrap JS and jQuery -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-rF0Rc7fro5lI52j5zIXBKCmJTAIb9XPhhLz8VWxhxEhV71jUDD7EBQ6Di2fu7nSk" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> 
 </body>
