--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
             <li><a href="#automation-section">Automation</a></li>
             <li><a href="#about-section">About</a></li>
             <li><a href="#contact-section">Contact</a></li>
+<li><a <div class="dropdown">
+        <button class="dropbtn">Services</button>
+        <div class="dropdown-content">
+            <a href="#service1">Service 1</a>
+            <a href="#service2">Service 2</a>
+            <a href="#service3">Service 3</a>
+        </div>
+    </div> </li>
         </ul>
     </nav>
     <main>
@@ -58,14 +66,7 @@
         <section id="menu-dropdown">
             <h2>Ask Us</h2>
             <!-- Dropdown -->
-    <div class="dropdown">
-        <button class="dropbtn">Services</button>
-        <div class="dropdown-content">
-            <a href="#service1">Service 1</a>
-            <a href="#service2">Service 2</a>
-            <a href="#service3">Service 3</a>
-        </div>
-    </div>
+    
         </section>
         <section id="about-section">
             <h2>About Section</h2>
