--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <h2>Automation Section</h2>
             <p id="automation-text">Click the button to automate something!</p>
             <button id="automation-button">Automate</button> <button id="automation-button">Automate2</button>
-            <button id="automation-button">Automate3</button>
+             <button id="quiz-btn">Take Quiz</button>
         </section>
         <section id="menu-dropdown">
             <h2>Ask Us</h2>
