--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="option"><input type="radio" name="q3" value="Venus"> Venus</div>
         </div>
 
-        <button id="submit-btn">Submit</button>
+        <button id="submit-btn">Submit</button>  <button id="rest-btn">Reset</button>
         <div id="result"></div>
     </div>
 
