--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="option"><input type="radio" name="q3" value="Venus"> Venus</div>
         </div>
 
-        <button id="submit-btn">Submit</button>  <button type="reset">Reset</button>
+        <button id="submit-btn">Submit</button>  <button type="reset" onclick="resetForm()">Reset</button>
         <div id="result"></div>
     </div>
 
