--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
+  <header>
+    <h1>Testing Heading Level 1</h1>
+  </header>
     <nav class="navbar">
         <div id="menu-icon">&#9776;</div>
         <div id="menu">
